force-app/main/default/objects/SDO_SCOM_Auction_Bid__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account for which user is placing order</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Auction Bids</relationshipLabel>
        <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Auction for which bid is placed</description>
        <label>Auction</label>
        <referenceTo>SDO_SCOM_Auction__c</referenceTo>
        <relationshipLabel>Auction Bids</relationshipLabel>
        <relationshipName>Auction_Bids</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Amount__c</fullName>
        <description>User&apos;s bid</description>
        <label>Bid Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Auction Bids</relationshipLabel>
        <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SDO_SCOM_Auction_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auction Bid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AB-{00000}/{000}</displayFormat>
        <label>Auction Bid Nmae</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auction Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>